# spider_ros2

./: README.md
spider_client_library/: CMakeLists.txt  package.xml
spider_client_library/include/: spider_client_interface.h  spider_convent_trajectory.h  spider_gait_generator.h  spider_ik.h  spider_struct_data.h
spider_client_library/include/spider_client_library/: spider_ik.h
spider_client_library/src/: spider_convent_trajectory.cpp  spider_gait_generator.cpp  spider_ik.cpp
spider_common/: CMakeLists.txt  package.xml
spider_common/cfg/: rviz2.rviz
spider_common/launch/: full.launch.py
spider_control/: CMakeLists.txt  hardware_interface_plugin.xml  package.xml
spider_control/include/spider_control/: spider_control.h  spider_hardware_interface.h
spider_control/src/: spider_hardware_interface.cpp
spider_controllers/: CMakeLists.txt  package.xml
spider_controllers/config/: ros_controllers.yaml
spider_description/: CMakeLists.txt  package.xml
spider_description/config/: joint_names_spider.yaml  spider_parametrs.yaml
spider_description/launch/: display.launch.py
spider_description/meshes/: 1.STL  2.STL  3.STL  base_link.STL  coxa_link.STL  femur1.STL  femur_link_old.STL  foot_link.STL  tibia_link.STL
spider_description/urdf/: initial_positions.yaml  spider.ros2_control.xacro  spider.urdf  spider.urdf.xacro  spider_macro.xacro
spider_driver/: CMakeLists.txt  hardware_interface_plugin.xml  package.xml
spider_driver/include/spider_control/: spider_control.h  spider_hardware_interface.h
spider_driver/src/: spider_control.cpp  spider_hardware_interface.cpp
spider_ik_server/: CMakeLists.txt  package.xml
spider_ik_server/include/spider_ik_server/: spider_ik_server.h
spider_ik_server/src/: spider_ik_server.cpp
spider_imitator/: CMakeLists.txt  package.xml
spider_imitator/include/: spider_client_imitation.h
spider_imitator/src/: spider_client_imitation.cpp
spider_moveit_config/: CMakeLists.txt  package.xml
spider_moveit_config/config/: joint_limits.yaml  ros2_controllers.yaml  spider.srdf  spider.urdf.xacro
spider_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
spider_msgs/: CMakeLists.txt  package.xml
spider_msgs/msg/: ControlModeSystem.msg  Joints.msg
spider_msgs/srv/: IK.srv
